--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<h2>Bảng đấu vòng tròn 6 đội</h2>
+<h2>Giải Vô Địch Thể Thao Là Bỏ Cuộc</h2>
 
 <div id="inputTeams">
   <p>Nhập tên 6 đội:</p>
