--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bảng đấu vòng tròn 6 đội</title>
+<title>Giải Vô Địch Thể Thao Là Bỏ Cuộc</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 30px; }
   h2 { text-align: center; }
