--- a/index.html
+++ b/index.html
@@ -114,195 +114,201 @@
   <div id="matches"></div>
   <div id="ranking"></div>
   <div id="predictionResult"></div>
+  
 
-  <script>
-    function saveData(key, value) {
-      localStorage.setItem(key, JSON.stringify(value));
-    }
-    function loadData(key, defaultValue = null) {
-      const data = localStorage.getItem(key);
-      return data ? JSON.parse(data) : defaultValue;
-    }
-
-    function shuffle(array) {
-      return array.sort(() => Math.random() - 0.5);
-    }
-
-    function createMatches() {
-  const inputs = document.querySelectorAll("#teamInputs input");
-  let teams = Array.from(inputs).map(i => i.value.trim()).filter(v => v);
-
-  if (teams.length !== 6) {
-    alert("Vui lòng nhập đủ 6 đội!");
-    return;
+<script>
+  function saveData(key, value) {
+    localStorage.setItem(key, JSON.stringify(value));
+  }
+  function loadData(key, defaultValue = null) {
+    const data = localStorage.getItem(key);
+    return data ? JSON.parse(data) : defaultValue;
   }
 
-  // Lấy danh sách đội đã lưu trước đó
-  const oldTeams = loadData("teams", []);
+  // Tạo lịch thi đấu hợp lý (theo thứ tự 2 đội đầu, sau đó xoay vòng)
+  function generateMatches(teams) {
+    const n = teams.length;
+    if (n % 2 !== 0) teams.push("Nghỉ");
+    const rounds = n - 1;
+    const half = n / 2;
+    const schedule = [];
 
-  // Lưu danh sách đội mới
-  saveData("teams", teams);
-
-  // So sánh xem danh sách đội có thay đổi không
-  const teamsChanged = JSON.stringify(oldTeams) !== JSON.stringify(teams);
-
-  // Nếu chưa có dự đoán hoặc danh sách đội đã thay đổi → random lại
-  let randomTeam = loadData("prediction");
-  if (!randomTeam || teamsChanged) {
-    randomTeam = teams[Math.floor(Math.random() * teams.length)];
-    saveData("prediction", randomTeam);
+    let arr = [...teams];
+    for (let round = 0; round < rounds; round++) {
+      const matches = [];
+      for (let i = 0; i < half; i++) {
+        const t1 = arr[i];
+        const t2 = arr[n - 1 - i];
+        if (t1 !== "Nghỉ" && t2 !== "Nghỉ") matches.push([t1, t2]);
+      }
+      schedule.push(matches);
+      arr.splice(1, 0, arr.pop());
+    }
+    return schedule.flat();
   }
 
-  document.getElementById("predictionText").innerHTML = `<b>${randomTeam}</b>`;
+  function createMatches() {
+    const inputs = document.querySelectorAll("#teamInputs input");
+    let teams = Array.from(inputs).map(i => i.value.trim()).filter(v => v);
 
-  // Tạo bảng đấu vòng tròn
-  const matches = [];
-  for (let i = 0; i < teams.length; i++) {
-    for (let j = i + 1; j < teams.length; j++) {
-      matches.push([teams[i], teams[j]]);
+    if (teams.length !== 6) {
+      alert("Vui lòng nhập đủ 6 đội!");
+      return;
     }
+
+    const oldTeams = loadData("teams", []);
+    saveData("teams", teams);
+
+    const teamsChanged = JSON.stringify(oldTeams) !== JSON.stringify(teams);
+
+    // Nếu đổi đội thì random lại dự đoán
+    let randomTeam = loadData("prediction");
+    if (!randomTeam || teamsChanged) {
+      randomTeam = teams[Math.floor(Math.random() * teams.length)];
+      saveData("prediction", randomTeam);
+    }
+
+    document.getElementById("predictionText").innerHTML = `<b>${randomTeam}</b>`;
+
+    // Tạo danh sách trận đấu
+    const matches = generateMatches(teams);
+    saveData("matches", matches);
+    renderMatches(matches);
   }
 
-  saveData("matches", matches);
-  renderMatches(matches);
-}
+  function renderMatches(matches) {
+    let html = "<h3>Danh sách trận đấu</h3><table><tr><th>STT</th><th>Đội 1</th><th>Đội 2</th><th>Tỉ số (VD: 21-15)</th><th>Đội thắng</th></tr>";
+    const savedScores = loadData("scores", {});
+    const savedWinners = loadData("winners", {});
 
+    matches.forEach((m, index) => {
+      const score = savedScores[index] || "";
+      const winner = savedWinners[index] || "";
+      html += `<tr>
+        <td>${index + 1}</td>
+        <td>${m[0]}</td>
+        <td>${m[1]}</td>
+        <td><input type="text" id="score_${index}" class="score-input" placeholder="21-15" value="${score}"></td>
+        <td>
+          <select id="match_${index}">
+            <option value="">Chưa chọn</option>
+            <option value="${m[0]}" ${winner === m[0] ? "selected" : ""}>${m[0]}</option>
+            <option value="${m[1]}" ${winner === m[1] ? "selected" : ""}>${m[1]}</option>
+          </select>
+        </td>
+      </tr>`;
+    });
 
-    function renderMatches(matches) {
-      let html = "<h3>Danh sách trận đấu</h3><table><tr><th>Đội 1</th><th>Đội 2</th><th>Tỉ số (VD: 21-15)</th><th>Đội thắng</th></tr>";
-      const savedScores = loadData("scores", {});
-      const savedWinners = loadData("winners", {});
+    html += "</table><button onclick='calculateResults()'>Lưu và xếp hạng</button>";
+    document.getElementById("matches").innerHTML = html;
 
-      matches.forEach((m, index) => {
-        const score = savedScores[index] || "";
-        const winner = savedWinners[index] || "";
-        html += `<tr>
-      <td>${m[0]}</td>
-      <td>${m[1]}</td>
-      <td><input type="text" id="score_${index}" class="score-input" placeholder="21-15" value="${score}"></td>
-      <td>
-        <select id="match_${index}">
-          <option value="">Chưa chọn</option>
-          <option value="${m[0]}" ${winner === m[0] ? "selected" : ""}>${m[0]}</option>
-          <option value="${m[1]}" ${winner === m[1] ? "selected" : ""}>${m[1]}</option>
-        </select>
-      </td>
-    </tr>`;
-      });
-      html += "</table><button onclick='calculateResults()'>Lưu và xếp hạng</button>";
-      document.getElementById("matches").innerHTML = html;
-      window.matchData = { matches, teams: matches.flat().filter((v, i, a) => a.indexOf(v) === i) };
+    window.matchData = { matches, teams: matches.flat().filter((v, i, a) => a.indexOf(v) === i) };
 
-      matches.forEach((_, index) => {
-        document.getElementById(`score_${index}`).addEventListener("input", saveScores);
-        document.getElementById(`match_${index}`).addEventListener("change", saveWinners);
-      });
+    matches.forEach((_, index) => {
+      document.getElementById(`score_${index}`).addEventListener("input", saveScores);
+      document.getElementById(`match_${index}`).addEventListener("change", saveWinners);
+    });
+  }
+
+  function saveScores() {
+    const scores = {};
+    document.querySelectorAll("[id^='score_']").forEach(input => {
+      const idx = input.id.split("_")[1];
+      scores[idx] = input.value;
+    });
+    saveData("scores", scores);
+  }
+
+  function saveWinners() {
+    const winners = {};
+    document.querySelectorAll("[id^='match_']").forEach(sel => {
+      const idx = sel.id.split("_")[1];
+      winners[idx] = sel.value;
+    });
+    saveData("winners", winners);
+  }
+
+  function calculateResults() {
+    const { matches, teams } = window.matchData;
+    const stats = {};
+    teams.forEach(t => stats[t] = { points: 0, scored: 0, conceded: 0 });
+
+    const scores = loadData("scores", {});
+    const winners = loadData("winners", {});
+
+    matches.forEach((m, index) => {
+      const result = winners[index];
+      const scoreText = scores[index];
+      if (!scoreText) return;
+
+      const [s1, s2] = scoreText.split("-").map(Number);
+      if (isNaN(s1) || isNaN(s2)) return;
+
+      const [team1, team2] = m;
+
+      stats[team1].scored += s1;
+      stats[team1].conceded += s2;
+      stats[team2].scored += s2;
+      stats[team2].conceded += s1;
+
+      if (result === team1) stats[team1].points += 1;
+      else if (result === team2) stats[team2].points += 1;
+    });
+
+    const ranking = Object.entries(stats).sort((a, b) => {
+      const diffA = a[1].scored - a[1].conceded;
+      const diffB = b[1].scored - b[1].conceded;
+      if (b[1].points !== a[1].points) return b[1].points - a[1].points;
+      if (diffB !== diffA) return diffB - diffA;
+      return b[1].scored - a[1].scored;
+    });
+
+    let html = "<h3>Bảng xếp hạng</h3><table><tr><th>Vị trí</th><th>Đội</th><th>Điểm</th><th>Ghi được</th><th>Bị ghi</th><th>Hiệu số</th></tr>";
+    ranking.forEach(([team, stat], idx) => {
+      const diff = stat.scored - stat.conceded;
+      html += `<tr style="${idx === 0 ? 'background:#d1ffd1;font-weight:bold;' : ''}">
+        <td>${idx + 1}</td>
+        <td>${team}</td>
+        <td>${stat.points}</td>
+        <td>${stat.scored}</td>
+        <td>${stat.conceded}</td>
+        <td>${diff > 0 ? '+' + diff : diff}</td>
+      </tr>`;
+    });
+    html += "</table>";
+    document.getElementById("ranking").innerHTML = html;
+
+    const predicted = loadData("prediction");
+    const champion = ranking[0][0];
+    if (predicted === champion) {
+      document.getElementById("predictionResult").innerHTML = `🎉 Dự đoán đúng! Đội vô địch là <b>${champion}</b>.`;
+    } else {
+      document.getElementById("predictionResult").innerHTML = `🤔 Dự đoán sai. Dự đoán là <b>${predicted}</b>, nhưng vô địch thật là <b>${champion}</b>.`;
     }
 
-    function saveScores() {
-      const scores = {};
-      const inputs = document.querySelectorAll("[id^='score_']");
-      inputs.forEach(input => {
-        const idx = input.id.split("_")[1];
-        scores[idx] = input.value;
-      });
-      saveData("scores", scores);
+    saveData("ranking", ranking);
+  }
+
+  window.onload = function () {
+    const savedTeams = loadData("teams", []);
+    if (savedTeams.length) {
+      const inputs = document.querySelectorAll("#teamInputs input");
+      savedTeams.forEach((v, i) => inputs[i].value = v || "");
     }
 
-    function saveWinners() {
-      const winners = {};
-      const selects = document.querySelectorAll("[id^='match_']");
-      selects.forEach(sel => {
-        const idx = sel.id.split("_")[1];
-        winners[idx] = sel.value;
-      });
-      saveData("winners", winners);
+    const savedPrediction = loadData("prediction");
+    if (savedPrediction) {
+      document.getElementById("predictionText").innerHTML = `<b>${savedPrediction}</b>`;
     }
 
-    function calculateResults() {
-      const { matches, teams } = window.matchData;
-      const stats = {};
-      teams.forEach(t => stats[t] = { points: 0, scored: 0, conceded: 0 });
+    const savedMatches = loadData("matches");
+    if (savedMatches) renderMatches(savedMatches);
 
-      const scores = loadData("scores", {});
-      const winners = loadData("winners", {});
+    const savedRanking = loadData("ranking");
+    if (savedRanking) calculateResults();
+  };
+</script>
 
-      matches.forEach((m, index) => {
-        const result = winners[index];
-        const scoreText = scores[index];
-        if (!scoreText) return;
-
-        const [s1, s2] = scoreText.split("-").map(Number);
-        if (isNaN(s1) || isNaN(s2)) return;
-
-        const team1 = m[0];
-        const team2 = m[1];
-
-        stats[team1].scored += s1;
-        stats[team1].conceded += s2;
-        stats[team2].scored += s2;
-        stats[team2].conceded += s1;
-
-        if (result === team1) stats[team1].points += 1;
-        else if (result === team2) stats[team2].points += 1;
-      });
-
-      const ranking = Object.entries(stats).sort((a, b) => {
-        const diffA = a[1].scored - a[1].conceded;
-        const diffB = b[1].scored - b[1].conceded;
-        if (b[1].points !== a[1].points) return b[1].points - a[1].points;
-        if (diffB !== diffA) return diffB - diffA;
-        return b[1].scored - a[1].scored;
-      });
-
-      let html = "<h3>Bảng xếp hạng</h3><table><tr><th>Vị trí</th><th>Đội</th><th>Điểm</th><th>Ghi được</th><th>Bị ghi</th><th>Hiệu số</th></tr>";
-      ranking.forEach(([team, stat], idx) => {
-        const diff = stat.scored - stat.conceded;
-        html += `<tr style="${idx === 0 ? 'background:#d1ffd1;font-weight:bold;' : ''}">
-      <td>${idx + 1}</td>
-      <td>${team}</td>
-      <td>${stat.points}</td>
-      <td>${stat.scored}</td>
-      <td>${stat.conceded}</td>
-      <td>${diff > 0 ? '+' + diff : diff}</td>
-    </tr>`;
-      });
-      html += "</table>";
-
-      document.getElementById("ranking").innerHTML = html;
-
-      // So sánh với dự đoán tự động
-      const predicted = loadData("prediction");
-      const champion = ranking[0][0];
-      if (predicted === champion) {
-        document.getElementById("predictionResult").innerHTML = `🎉 Hệ thống đã dự đoán đúng! Đội vô địch là <b>${champion}</b>.`;
-      } else {
-        document.getElementById("predictionResult").innerHTML = `🤔 Hệ thống dự đoán sai. Dự đoán là <b>${predicted}</b>, nhưng vô địch thật là <b>${champion}</b>.`;
-      }
-
-      saveData("ranking", ranking);
-    }
-
-    // Khi tải lại trang, khôi phục dữ liệu
-    window.onload = function () {
-      const savedTeams = loadData("teams", []);
-      if (savedTeams.length) {
-        const inputs = document.querySelectorAll("#teamInputs input");
-        savedTeams.forEach((v, i) => inputs[i].value = v || "");
-      }
-
-      const savedPrediction = loadData("prediction");
-      if (savedPrediction) {
-        document.getElementById("predictionText").innerHTML = `<b>${savedPrediction}</b>`;
-      }
-
-      const savedMatches = loadData("matches");
-      if (savedMatches) renderMatches(savedMatches);
-
-      const savedRanking = loadData("ranking");
-      if (savedRanking) calculateResults();
-    };
-  </script>
 
 </body>
 
