--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <title>Giải Vô Địch Thể Thao Là Bỏ Cuộc</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-
-      font-family: Arial, sans-serif;
+   
+      
       margin: 30px;
       position: relative;
       background-color: #ffffff;
@@ -62,21 +61,23 @@
     }
 
     /* Cố định độ rộng cho cột Đội thắng */
-td select[id^="match_"] {
-  width: 140px;       /* 👈 chỉnh độ rộng mong muốn (có thể thay 120–160px tùy giao diện) */
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-  box-sizing: border-box;
-}
+    td select[id^="match_"] {
+      width: 140px;
+      /* 👈 chỉnh độ rộng mong muốn (có thể thay 120–160px tùy giao diện) */
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      box-sizing: border-box;
+    }
 
-/* Đảm bảo các ô trong bảng có kích thước đều nhau */
-table td, table th {
-  text-align: center;
-  vertical-align: middle;
-  height: 40px;
-  white-space: nowrap;
-}
+    /* Đảm bảo các ô trong bảng có kích thước đều nhau */
+    table td,
+    table th {
+      text-align: center;
+      vertical-align: middle;
+      height: 40px;
+      white-space: nowrap;
+    }
 
 
     button {
@@ -132,77 +133,77 @@ table td, table th {
   <div id="matches"></div>
   <div id="ranking"></div>
   <div id="predictionResult"></div>
-  
 
-<script>
-  function saveData(key, value) {
-    localStorage.setItem(key, JSON.stringify(value));
-  }
-  function loadData(key, defaultValue = null) {
-    const data = localStorage.getItem(key);
-    return data ? JSON.parse(data) : defaultValue;
-  }
 
-  // Tạo lịch thi đấu hợp lý (theo thứ tự 2 đội đầu, sau đó xoay vòng)
-  function generateMatches(teams) {
-    const n = teams.length;
-    if (n % 2 !== 0) teams.push("Nghỉ");
-    const rounds = n - 1;
-    const half = n / 2;
-    const schedule = [];
+  <script>
+    function saveData(key, value) {
+      localStorage.setItem(key, JSON.stringify(value));
+    }
+    function loadData(key, defaultValue = null) {
+      const data = localStorage.getItem(key);
+      return data ? JSON.parse(data) : defaultValue;
+    }
 
-    let arr = [...teams];
-    for (let round = 0; round < rounds; round++) {
-      const matches = [];
-      for (let i = 0; i < half; i++) {
-        const t1 = arr[i];
-        const t2 = arr[n - 1 - i];
-        if (t1 !== "Nghỉ" && t2 !== "Nghỉ") matches.push([t1, t2]);
+    // Tạo lịch thi đấu hợp lý (theo thứ tự 2 đội đầu, sau đó xoay vòng)
+    function generateMatches(teams) {
+      const n = teams.length;
+      if (n % 2 !== 0) teams.push("Nghỉ");
+      const rounds = n - 1;
+      const half = n / 2;
+      const schedule = [];
+
+      let arr = [...teams];
+      for (let round = 0; round < rounds; round++) {
+        const matches = [];
+        for (let i = 0; i < half; i++) {
+          const t1 = arr[i];
+          const t2 = arr[n - 1 - i];
+          if (t1 !== "Nghỉ" && t2 !== "Nghỉ") matches.push([t1, t2]);
+        }
+        schedule.push(matches);
+        arr.splice(1, 0, arr.pop());
       }
-      schedule.push(matches);
-      arr.splice(1, 0, arr.pop());
-    }
-    return schedule.flat();
-  }
-
-  function createMatches() {
-    const inputs = document.querySelectorAll("#teamInputs input");
-    let teams = Array.from(inputs).map(i => i.value.trim()).filter(v => v);
-
-    if (teams.length !== 6) {
-      alert("Vui lòng nhập đủ 6 đội!");
-      return;
+      return schedule.flat();
     }
 
-    const oldTeams = loadData("teams", []);
-    saveData("teams", teams);
+    function createMatches() {
+      const inputs = document.querySelectorAll("#teamInputs input");
+      let teams = Array.from(inputs).map(i => i.value.trim()).filter(v => v);
 
-    const teamsChanged = JSON.stringify(oldTeams) !== JSON.stringify(teams);
+      if (teams.length !== 6) {
+        alert("Vui lòng nhập đủ 6 đội!");
+        return;
+      }
 
-    // Nếu đổi đội thì random lại dự đoán
-    let randomTeam = loadData("prediction");
-    if (!randomTeam || teamsChanged) {
-      randomTeam = teams[Math.floor(Math.random() * teams.length)];
-      saveData("prediction", randomTeam);
+      const oldTeams = loadData("teams", []);
+      saveData("teams", teams);
+
+      const teamsChanged = JSON.stringify(oldTeams) !== JSON.stringify(teams);
+
+      // Nếu đổi đội thì random lại dự đoán
+      let randomTeam = loadData("prediction");
+      if (!randomTeam || teamsChanged) {
+        randomTeam = teams[Math.floor(Math.random() * teams.length)];
+        saveData("prediction", randomTeam);
+      }
+
+      document.getElementById("predictionText").innerHTML = `<b>${randomTeam}</b>`;
+
+      // Tạo danh sách trận đấu
+      const matches = generateMatches(teams);
+      saveData("matches", matches);
+      renderMatches(matches);
     }
 
-    document.getElementById("predictionText").innerHTML = `<b>${randomTeam}</b>`;
+    function renderMatches(matches) {
+      let html = "<h3>Danh sách trận đấu</h3><table><tr><th>STT</th><th>Đội 1</th><th>Đội 2</th><th>Tỉ số (VD: 21-15)</th><th>Đội thắng</th></tr>";
+      const savedScores = loadData("scores", {});
+      const savedWinners = loadData("winners", {});
 
-    // Tạo danh sách trận đấu
-    const matches = generateMatches(teams);
-    saveData("matches", matches);
-    renderMatches(matches);
-  }
-
-  function renderMatches(matches) {
-    let html = "<h3>Danh sách trận đấu</h3><table><tr><th>STT</th><th>Đội 1</th><th>Đội 2</th><th>Tỉ số (VD: 21-15)</th><th>Đội thắng</th></tr>";
-    const savedScores = loadData("scores", {});
-    const savedWinners = loadData("winners", {});
-
-    matches.forEach((m, index) => {
-      const score = savedScores[index] || "";
-      const winner = savedWinners[index] || "";
-      html += `<tr>
+      matches.forEach((m, index) => {
+        const score = savedScores[index] || "";
+        const winner = savedWinners[index] || "";
+        html += `<tr>
         <td>${index + 1}</td>
         <td>${m[0]}</td>
         <td>${m[1]}</td>
@@ -215,76 +216,76 @@ table td, table th {
           </select>
         </td>
       </tr>`;
-    });
+      });
 
-    html += "</table><button onclick='calculateResults()'>Lưu và xếp hạng</button>";
-    document.getElementById("matches").innerHTML = html;
+      html += "</table><button onclick='calculateResults()'>Lưu và xếp hạng</button>";
+      document.getElementById("matches").innerHTML = html;
 
-    window.matchData = { matches, teams: matches.flat().filter((v, i, a) => a.indexOf(v) === i) };
+      window.matchData = { matches, teams: matches.flat().filter((v, i, a) => a.indexOf(v) === i) };
 
-    matches.forEach((_, index) => {
-      document.getElementById(`score_${index}`).addEventListener("input", saveScores);
-      document.getElementById(`match_${index}`).addEventListener("change", saveWinners);
-    });
-  }
+      matches.forEach((_, index) => {
+        document.getElementById(`score_${index}`).addEventListener("input", saveScores);
+        document.getElementById(`match_${index}`).addEventListener("change", saveWinners);
+      });
+    }
 
-  function saveScores() {
-    const scores = {};
-    document.querySelectorAll("[id^='score_']").forEach(input => {
-      const idx = input.id.split("_")[1];
-      scores[idx] = input.value;
-    });
-    saveData("scores", scores);
-  }
+    function saveScores() {
+      const scores = {};
+      document.querySelectorAll("[id^='score_']").forEach(input => {
+        const idx = input.id.split("_")[1];
+        scores[idx] = input.value;
+      });
+      saveData("scores", scores);
+    }
 
-  function saveWinners() {
-    const winners = {};
-    document.querySelectorAll("[id^='match_']").forEach(sel => {
-      const idx = sel.id.split("_")[1];
-      winners[idx] = sel.value;
-    });
-    saveData("winners", winners);
-  }
+    function saveWinners() {
+      const winners = {};
+      document.querySelectorAll("[id^='match_']").forEach(sel => {
+        const idx = sel.id.split("_")[1];
+        winners[idx] = sel.value;
+      });
+      saveData("winners", winners);
+    }
 
-  function calculateResults() {
-    const { matches, teams } = window.matchData;
-    const stats = {};
-    teams.forEach(t => stats[t] = { points: 0, scored: 0, conceded: 0 });
+    function calculateResults() {
+      const { matches, teams } = window.matchData;
+      const stats = {};
+      teams.forEach(t => stats[t] = { points: 0, scored: 0, conceded: 0 });
 
-    const scores = loadData("scores", {});
-    const winners = loadData("winners", {});
+      const scores = loadData("scores", {});
+      const winners = loadData("winners", {});
 
-    matches.forEach((m, index) => {
-      const result = winners[index];
-      const scoreText = scores[index];
-      if (!scoreText) return;
+      matches.forEach((m, index) => {
+        const result = winners[index];
+        const scoreText = scores[index];
+        if (!scoreText) return;
 
-      const [s1, s2] = scoreText.split("-").map(Number);
-      if (isNaN(s1) || isNaN(s2)) return;
+        const [s1, s2] = scoreText.split("-").map(Number);
+        if (isNaN(s1) || isNaN(s2)) return;
 
-      const [team1, team2] = m;
+        const [team1, team2] = m;
 
-      stats[team1].scored += s1;
-      stats[team1].conceded += s2;
-      stats[team2].scored += s2;
-      stats[team2].conceded += s1;
+        stats[team1].scored += s1;
+        stats[team1].conceded += s2;
+        stats[team2].scored += s2;
+        stats[team2].conceded += s1;
 
-      if (result === team1) stats[team1].points += 1;
-      else if (result === team2) stats[team2].points += 1;
-    });
+        if (result === team1) stats[team1].points += 1;
+        else if (result === team2) stats[team2].points += 1;
+      });
 
-    const ranking = Object.entries(stats).sort((a, b) => {
-      const diffA = a[1].scored - a[1].conceded;
-      const diffB = b[1].scored - b[1].conceded;
-      if (b[1].points !== a[1].points) return b[1].points - a[1].points;
-      if (diffB !== diffA) return diffB - diffA;
-      return b[1].scored - a[1].scored;
-    });
+      const ranking = Object.entries(stats).sort((a, b) => {
+        const diffA = a[1].scored - a[1].conceded;
+        const diffB = b[1].scored - b[1].conceded;
+        if (b[1].points !== a[1].points) return b[1].points - a[1].points;
+        if (diffB !== diffA) return diffB - diffA;
+        return b[1].scored - a[1].scored;
+      });
 
-    let html = "<h3>Bảng xếp hạng</h3><table><tr><th>Vị trí</th><th>Đội</th><th>Điểm</th><th>Ghi được</th><th>Bị ghi</th><th>Hiệu số</th></tr>";
-    ranking.forEach(([team, stat], idx) => {
-      const diff = stat.scored - stat.conceded;
-      html += `<tr style="${idx === 0 ? 'background:#d1ffd1;font-weight:bold;' : ''}">
+      let html = "<h3>Bảng xếp hạng</h3><table><tr><th>Vị trí</th><th>Đội</th><th>Điểm</th><th>Ghi được</th><th>Bị ghi</th><th>Hiệu số</th></tr>";
+      ranking.forEach(([team, stat], idx) => {
+        const diff = stat.scored - stat.conceded;
+        html += `<tr style="${idx === 0 ? 'background:#d1ffd1;font-weight:bold;' : ''}">
         <td>${idx + 1}</td>
         <td>${team}</td>
         <td>${stat.points}</td>
@@ -292,40 +293,40 @@ table td, table th {
         <td>${stat.conceded}</td>
         <td>${diff > 0 ? '+' + diff : diff}</td>
       </tr>`;
-    });
-    html += "</table>";
-    document.getElementById("ranking").innerHTML = html;
+      });
+      html += "</table>";
+      document.getElementById("ranking").innerHTML = html;
 
-    const predicted = loadData("prediction");
-    const champion = ranking[0][0];
-    if (predicted === champion) {
-      document.getElementById("predictionResult").innerHTML = `🎉 Dự đoán đúng! Đội vô địch là <b>${champion}</b>.`;
-    } else {
-      document.getElementById("predictionResult").innerHTML = `🤔 Dự đoán sai. Dự đoán là <b>${predicted}</b>, nhưng vô địch thật là <b>${champion}</b>.`;
+      const predicted = loadData("prediction");
+      const champion = ranking[0][0];
+      if (predicted === champion) {
+        document.getElementById("predictionResult").innerHTML = `🎉 Dự đoán đúng! Đội vô địch là <b>${champion}</b>.`;
+      } else {
+        document.getElementById("predictionResult").innerHTML = `🤔 Dự đoán sai. Dự đoán là <b>${predicted}</b>, nhưng vô địch thật là <b>${champion}</b>.`;
+      }
+
+      saveData("ranking", ranking);
     }
 
-    saveData("ranking", ranking);
-  }
+    window.onload = function () {
+      const savedTeams = loadData("teams", []);
+      if (savedTeams.length) {
+        const inputs = document.querySelectorAll("#teamInputs input");
+        savedTeams.forEach((v, i) => inputs[i].value = v || "");
+      }
 
-  window.onload = function () {
-    const savedTeams = loadData("teams", []);
-    if (savedTeams.length) {
-      const inputs = document.querySelectorAll("#teamInputs input");
-      savedTeams.forEach((v, i) => inputs[i].value = v || "");
-    }
+      const savedPrediction = loadData("prediction");
+      if (savedPrediction) {
+        document.getElementById("predictionText").innerHTML = `<b>${savedPrediction}</b>`;
+      }
 
-    const savedPrediction = loadData("prediction");
-    if (savedPrediction) {
-      document.getElementById("predictionText").innerHTML = `<b>${savedPrediction}</b>`;
-    }
+      const savedMatches = loadData("matches");
+      if (savedMatches) renderMatches(savedMatches);
 
-    const savedMatches = loadData("matches");
-    if (savedMatches) renderMatches(savedMatches);
-
-    const savedRanking = loadData("ranking");
-    if (savedRanking) calculateResults();
-  };
-</script>
+      const savedRanking = loadData("ranking");
+      if (savedRanking) calculateResults();
+    };
+  </script>
 
 
 </body>
