--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     }
 
     function renderMatches(matches) {
-      let html = "<h3>Danh sách trận đấu</h3><table><tr><th>STT</th><th>Đội 1</th><th>Đội 2</th><th>Tỉ số (VD: 21-15)</th><th>Đội thắng</th></tr>";
+      let html = "<h3>Danh sách trận đấu</h3><table><tr><th>STT</th><th>Đội 1</th><th>Đội 2</th><th>Tỉ số </th><th>Đội thắng</th></tr>";
       const savedScores = loadData("scores", {});
       const savedWinners = loadData("winners", {});
 
